mainfest/hospital-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-hospital-deployment
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-hospital
  template:
    metadata:
      labels:
        app: backend-hospital
    spec:
      containers:
        - name: backend-hospital
          image: be_dynamic_image
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: hospital-secret
