mainfest/hospital-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hospital-deployment
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-hospital
  template:
    metadata:
      labels:
        app: frontend-hospital
    spec:
      containers:
        - name: frontend-hospital
          image: fe_dynamic_image
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: hospital-secret
