mainfest/servece-be-hospital.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hospital
spec:
  selector:
    app: backend-hospital
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
