mainfest/servece-fe-hospital.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hospital
spec:
  selector:
    app: frontend-hospital
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: ClusterIP
