mainfest/ingress-hospital.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  namespace: hospital
  annotations:
    nginx.ingress.kubernetes.io/load-balancer-ip: "35.192.136.175"
spec:
  ingressClassName: nginx
  rules:
    - host: "backend-hospital.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
    - host: "frontend-hospital.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
